--- a/Flask Deployed App/templates/base.html
+++ b/Flask Deployed App/templates/base.html
@@ -11,7 +11,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/bttn.css/0.2.4/bttn.css">
     <link rel="stylesheet" href="../static/css/style.css">
+    <!-- Bootstrap CSS -->
+      <link href= "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"> 
+           
+      <!-- Font Awesome -->
+      <link href= 
+  "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
+            rel="stylesheet"> 
+      
+      <!-- Bootstrap Bundle with Popper -->
+      <script src= 
+  "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"> 
+      </script> 
 
+    
     <title> {% block pagetitle %}
 
         {% endblock pagetitle %}</title>
